@@ -24,11 +24,15 @@ import java.io.IOException;
 
 import org.openremote.controller.command.ExecutableCommand;
 import org.openremote.controller.model.sensor.Sensor;
-import org.openremote.controller.protocol.EventListener;
+import org.openremote.controller.protocol.ReadCommand;
 import org.openremote.controller.utils.Logger;
-import org.owfs.jowfsclient.Enums.*;
-import org.owfs.jowfsclient.OwfsClient;
-import org.owfs.jowfsclient.OwfsClientFactory;
+import org.owfs.jowfsclient.Enums.OwBusReturn;
+import org.owfs.jowfsclient.Enums.OwDeviceDisplayFormat;
+import org.owfs.jowfsclient.Enums.OwPersistence;
+import org.owfs.jowfsclient.Enums.OwTemperatureScale;
+import org.owfs.jowfsclient.OwfsConnection;
+import org.owfs.jowfsclient.OwfsConnectionConfig;
+import org.owfs.jowfsclient.OwfsConnectionFactory;
 import org.owfs.jowfsclient.OwfsException;
 
 /**
@@ -42,13 +46,13 @@ import org.owfs.jowfsclient.OwfsException;
  * deviceAddress   address of the 1-wire device, such as /1F.E9E803000000/main/28.25E9E3010000
  * filename        or sensor attribute - is filename in owfs that holds values, such as
  *                 "temperature", "temperature9", "humidity" or similar
- * refreshTime     time interval in seconds between two calls to owserver; any request between
- *                 these two calls will use cached value. In fact, it is cache timeout value.
+ * pollingIntercal time interval in seconds between two calls to owserver.
  *
  * @author <a href="mailto:jmisura@gmail.com">Jaroslav Misura</a>
  * @author Marcus
+ * @author <a href="matilto:eric@openremote.org>Eric Bariaux</a>
  */
-public class OneWireCommand implements ExecutableCommand, EventListener, Runnable
+public class OneWireCommand extends ReadCommand implements ExecutableCommand
 {
 
   // Class Members --------------------------------------------------------------------------------
@@ -65,15 +69,6 @@ public class OneWireCommand implements ExecutableCommand, EventListener, Runnabl
   private int pollingInterval;
   private TemperatureScale tempScale;
   private String data;
-
-  /** The thread that is used to peridically update the sensor */
-  private Thread pollingThread;
-  
-  /** The sensor which is updated */
-  private Sensor sensor;
-  
-  /** Boolean to indicate if polling thread should run */
-  boolean doPoll = false;
 
   // Constructors ---------------------------------------------------------------------------------
 
@@ -93,44 +88,50 @@ public class OneWireCommand implements ExecutableCommand, EventListener, Runnabl
   }
 
 
-  // Implements StatusCommand ---------------------------------------------------------------------
+  // Implements ReadCommand ---------------------------------------------------------------------
+
+  
+  @Override
+  public int getPollingInterval() {
+    return pollingInterval;
+  }
 
   /**
-   * Access value from 1-wire sensor. This method uses caching to avoid overloading 1-wire network with
-   * too many accesses. After value is read it is stored together with timestamp. This value is returned in all
-   * succeeding calls of read() until current time > timestamp + refresh timeout. If read fails (read from 1-wire
-   * returns null or exception is thrown by jowfs library) last available value is returned. In this case, timestamp
-   * is not updated, which means that next read() call will retry to get value from 1-wire.
-   * <p>
+   * Access value from 1-wire sensor.
+   *
    * Values from 1-wire sensors are just passed as string the way they are into sensor.update(). The sensor
    * has to map the result to it's internal data type.
    *
    * @return string value independent from sensor type
    */
-  private String read()
+  @Override
+  public String read(Sensor sensor)
   {
     logger.debug("1-Wire sensor " + deviceAddress + "/" + filename + " value is going to be read.");
-    OwfsClient client = OwfsClientFactory.newOwfsClient(hostname, port, true);
+    
+    OwfsConnectionConfig config = new OwfsConnectionConfig(hostname, port);
+    config.setDeviceDisplayFormat(OwDeviceDisplayFormat.F_DOT_I);
+    config.setBusReturn(OwBusReturn.ON);
+    config.setPersistence(OwPersistence.ON);
 
-    client.setDeviceDisplayFormat(OwDeviceDisplayFormat.OWNET_DDF_F_DOT_I);
-    client.setBusReturn(OwBusReturn.OWNET_BUSRETURN_ON);
-    client.setPersistence(OwPersistence.OWNET_PERSISTENCE_ON);
     switch (tempScale) {
       case Celsius:
-        client.setTemperatureScale(OwTemperatureScale.OWNET_TS_CELSIUS);  
+         config.setTemperatureScale(OwTemperatureScale.CELSIUS);
         break;
       case Fahrenheit:
-         client.setTemperatureScale(OwTemperatureScale.OWNET_TS_FAHRENHEIT);  
+         config.setTemperatureScale(OwTemperatureScale.FAHRENHEIT);
          break;
       case Kelvin:
-         client.setTemperatureScale(OwTemperatureScale.OWNET_TS_KELVIN);  
+         config.setTemperatureScale(OwTemperatureScale.KELVIN);
          break;
       case Rankine:
-         client.setTemperatureScale(OwTemperatureScale.OWNET_TS_RANKINE);  
+         config.setTemperatureScale(OwTemperatureScale.RANKINE);
          break;
-   }
+    }
     
     String value = null;
+
+    OwfsConnection client = OwfsConnectionFactory.newOwfsClient(config);
 
     logger.debug("Client created, before call");
 
@@ -167,11 +168,12 @@ public class OneWireCommand implements ExecutableCommand, EventListener, Runnabl
 
     logger.debug("1-Wire sensor " + deviceAddress + "/" + filename + " value is going to be changed to: '" + data);
 
-    OwfsClient client = OwfsClientFactory.newOwfsClient(hostname, port, true);
+    OwfsConnectionConfig config = new OwfsConnectionConfig(hostname, port);
+    config.setDeviceDisplayFormat(OwDeviceDisplayFormat.F_DOT_I);
+    config.setBusReturn(OwBusReturn.ON);
+    config.setPersistence(OwPersistence.ON);
+    OwfsConnection client = OwfsConnectionFactory.newOwfsClient(config);
 
-    client.setDeviceDisplayFormat(OwDeviceDisplayFormat.OWNET_DDF_F_DOT_I);
-    client.setBusReturn(OwBusReturn.OWNET_BUSRETURN_ON);
-    client.setPersistence(OwPersistence.OWNET_PERSISTENCE_ON);
     try
     {
       client.write(deviceAddress+"/"+filename, data);
@@ -185,43 +187,5 @@ public class OneWireCommand implements ExecutableCommand, EventListener, Runnabl
       logger.error("OneWire IO error, unable to write to OWSERVER.", e);
     }
   }
-
-
-  @Override
-  public void setSensor(Sensor sensor)
-  {
-    logger.debug("*** setSensor called as part of EventListener init *** sensor is: " + sensor);
-    this.sensor = sensor;
-    this.doPoll = true;
-    pollingThread = new Thread(this);
-    pollingThread.setName("Polling thread for sensor: " + sensor.getName());
-    pollingThread.start();
-  }
-
-
-  @Override
-  public void stop(Sensor sensor)
-  {
-    this.doPoll = false;
-  }
-
-
-  @Override
-  public void run()
-  {
-    logger.debug("Sensor thread started for sensor: " + sensor);
-    while (doPoll) {
-       String readValue = this.read();
-       sensor.update(readValue);
-       try {
-          Thread.sleep(pollingInterval); // We wait for the given pollingInterval before requesting URL again
-       } catch (InterruptedException e) {
-          doPoll = false;
-          pollingThread.interrupt();
-       }
-    }
-    logger.debug("*** Out of run method: " + sensor);
-  }
-
 
 }
